adding more endpoints and modifying player table to include statistics flag for UI
